# VerifAI-Fake-News-Detection

./: README.md  RUN_ON_WINDOWS.txt  pyproject.toml  requirements.txt  run_demo.cmd  run_demo.ps1  run_demo.py  start.bat  start.sh
data/: expanded_demo_news.csv  sample_news.csv
models/: fake_news_model.json  fake_news_model.pkl  fake_news_model_combo.pkl  fake_news_model_manual.json  fake_news_model_redesign.json  fake_news_model_sample.pkl
src/fake_news_detector/: api.py  config.py  data.py  inference.py  llm.py  model.py  predict.py  train.py
src/fake_news_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_api_integration.py  test_api_security.py  test_data.py  test_data_loading.py  test_inference_human_flows.py  test_llm.py  test_model_features.py  test_pipeline.py  test_prediction_behavior.py
web/: index.html
